[project]
name = "mcp-lc-demo"
version = "0.1.0"
description = "Stardog MCP/LagChain Webinar demo app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "langchain-stardog>=0.1.0",
    "langchain-core>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "deep-translator>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backends"]